...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
...
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/searchMainButton"
        android:text="@string/to_details" />


    <TextView
        android:id="@+id/totalCountTextViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/results_count"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
...
